# offkai-bot

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  LICENSE  README.md  compose.yml  pyproject.toml  requirements.txt
.gemini/: GEMINI.md
.github/workflows/: deploy-to-pi.yml  frontend-ci.yml  python-app.yml
bot/: Dockerfile  compose.yml  config.json  config.py  interactions.py  main.py  util.py
bot/src/offkai_bot/: config.py  errors.py  event_actions.py  interactions.py  main.py  util.py
bot/src/offkai_bot/alerts/: alerts.py  reminders.py  task.py
bot/src/offkai_bot/cogs/: events.py  general.py
bot/src/offkai_bot/data/: atomic.py  event.py  ranking.py  response.py
bot/src/offkai_bot/messages/: __init__.py
bot/tests/: conftest.py  test_allowed_mentions.py  test_event_actions.py  test_event_autocomplete.py  test_event_message_handling.py  test_extras_names_validation.py  test_logging.py  test_persistent_view_bug.py  test_role_management.py  test_task.py  test_util.py
bot/tests/alerts/: test_checkin_reminder.py  test_fire_alerts.py  test_register_alerts.py
bot/tests/commands/: test_archive_offkai.py  test_attendance.py  test_broadcast.py  test_capacity_waitlist.py  test_close_offkai.py  test_closed_attendance_count.py  test_create_offkai.py  test_delete_response.py  test_modify_offkai.py  test_promote.py  test_reopen_offkai.py  test_waitlist.py
bot/tests/data/: test_atomic.py  test_event.py  test_ranking.py  test_response.py
frontend/: .dockerignore  .gitignore  DEPLOYMENT.md  Dockerfile  LICENSE  README.md  next.config.ts  package-lock.json  package.json
frontend/.github/workflows/: deploy.yml
frontend/app/: globals.css  layout.tsx  manifest.ts  page.tsx
frontend/app/admin/: page.tsx
frontend/app/api/: db.ts  mock.ts  token.ts  validation.ts
frontend/app/api/attendee/: route.ts
frontend/app/api/attendees/: route.ts
frontend/app/api/checkin/: route.ts
frontend/app/api/events/: route.ts
frontend/app/components/: BrandSign.tsx  LiveClock.tsx  SmileyMark.tsx  izakaya-art.tsx
frontend/app/components/admin/: AdminLogin.tsx  AttendeeRow.tsx  FilterBar.tsx  ScanPopup.tsx  StatHeader.tsx  WaitlistList.tsx
frontend/app/components/pass/: DrinkCard.tsx  RSVPCard.tsx  StateScreens.tsx
frontend/app/hooks/: useAdminData.ts  usePass.ts  useScanner.ts
frontend/app/lib/: format.ts  i18n.tsx  scan.ts  types.ts
frontend/offkai-bot-data/: README.md
src/offkai_bot/: config.py  errors.py  event.py  event_actions.py  interactions.py  main.py  role_management.py  util.py
src/offkai_bot/alerts/: alerts.py  reminders.py  task.py
src/offkai_bot/cogs/: events.py  general.py
src/offkai_bot/data/: encoders.py  event.py  ranking.py  response.py
tests/: conftest.py  test_delete_response.py  test_error_handling.py  test_event_actions.py  test_event_autocomplete.py  test_event_message_handling.py  test_extras_names_validation.py  test_logging.py  test_persistent_view_bug.py  test_role_management.py  test_task.py  test_util.py
tests/alerts/: test_fire_alerts.py  test_register_alerts.py
tests/commands/: test_archive_offkai.py  test_attendance.py  test_broadcast.py  test_capacity_waitlist.py  test_close_offkai.py  test_closed_attendance_count.py  test_create_offkai.py  test_delete_response.py  test_drinks.py  test_modify_offkai.py  test_promote.py  test_reopen_offkai.py  test_waitlist.py
tests/data/: test_encoders.py  test_event.py  test_ranking.py  test_response.py
