[project]
dependencies = [
    "aiohappyeyeballs==2.6.0",
    "aiohttp==3.11.13",
    "aiosignal==1.3.2",
    "attrs==25.1.0",
    "discord-py==2.5.2",
    "frozenlist==1.5.0",
    "idna==3.10",
    "multidict==6.1.0",
    "propcache==0.3.0",
    "python-dotenv==1.0.1",
    "tzdata",
    "yarl==1.18.3",
]

name = "offkai-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Eyal Mazuz", email = "mazuzeyal@protonmail.com" }]
requires-python = ">=3.12.2"

[project.scripts]
offkai-bot = "offkai_bot.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "ruff>=0.15.0",
    "pytest-asyncio>=0.23.0",
    "prek>=0.3.1",
]


[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto" # Good practice for pytest-asyncio

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

# Same as Black.
line-length = 120
indent-width = 4

# Assume Python 3.12
target-version = "py312"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["W", "F", "UP", "SIM", "I", "N", "E"]
ignore = ["UP015", "N806", "N812"]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = false

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"


[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
extra_checks = true
